2012-06-07  Carlos Sánchez de La Lama  <csanchezdll@gmail.com>

	[BZ #14205]
	* sysdeps/sparc/sparc32/pthread_spin_lock.S: Do not use v9
	branches.

2012-06-04  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	[BZ #14188]
	* sysdeps/pthread/pthread.h
	[!(defined __GNUC__ && defined __EXCEPTIONS)]
	(pthread_cleanup_push, pthread_cleanup_push_defer_np): Use
	__libc_unlikely instead of __builtin_expect.

2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h: Removed.
	* sysdeps/unix/sysv/linux/i386/bits/semaphore.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/Implies: New file.
	* sysdeps/unix/sysv/linux/x86_64/Implies: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Renamed
	to ...
	* sysdeps/unix/sysv/linux/x86/bits/pthreadtypes.h: This.
	* sysdeps/unix/sysv/linux/x86_64/bits/semaphore.h: Renamed
	to ...
	* sysdeps/unix/sysv/linux/x86/bits/semaphore.h: This.

2012-05-30  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14132]
	* nptl-init.c (pthread_functions): Remove use of INTUSE and
	_internal aliases.
	(__pthread_initialize_minimal_internal): Likewise.
	* sem_open.c: Likewise.
	* sem_unlink.c: Likewise.
	* pthreadP.h: Replace _internal aliases by hidden_proto
	declarations.
	* pthread_getspecific.c: Replace _internal alias by hidden_def.
	* pthread_key_create.c: Likewise.
	* pthread_mutex_destroy.c: Likewise.
	* pthread_mutex_init.c: Likewise.
	* pthread_mutex_lock.c: Likewise.
	* pthread_mutex_unlock.c: Likewise.
	* pthread_once.c: Likewise.
	* pthread_rwlock_rdlock.c: Likewise.
	* pthread_rwlock_unlock.c: Likewise.
	* pthread_rwlock_wrlock.c: Likewise.
	* pthread_setspecific.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_rdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_wrlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/pthread_once.S: Likewise.